--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
+    "express": "^4.17.1",
+    "sequelize": "^6.12.0-beta.3",
     "vuepress": "^1.8.2",
     "vuepress-theme-cool": "^1.3.1"
   }
