--- a/src/js/package.json
+++ b/src/js/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.1.0",
     "sequelize": "^6.12.0-beta.3",
     "tedious": "^14.0.0"
   },
