--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "sequelize": "^6.12.0-beta.3",
     "vuepress": "^1.8.2",
     "vuepress-theme-cool": "^1.3.1"
+  },
+  "devDependencies": {
+    "node-fetch": "^3.1.0"
   }
 }
